# encoding-binary

./: CMakeLists.txt  COPYING.txt  README.rst
include/encoding/binary/: buf_fwd.h  buffer.h
test/: test_buffer.cc
